# higgs-boson-hybrid-learning

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
results/: ga.csv  ga_active_classifier_population.json  ga_al.csv  ga_al_el.csv  gp_classifier_population.json  metrics_comparison.csv  notebook_results.csv
src/: __init__.py  config.py  data_preprocessing.py  experiments.py  metrics.py  utils.py  visualization.py
src/active_learning/: __init__.py  ga_active.py  sampling.py
src/ensemble/: __init__.py  ga_ensemble.py  voting.py
src/evolutionary/: __init__.py  fitness.py  ga_classifier.py  primitives.py
