[project]
name = "higgs-boson-hybrid-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "modal-python>=0.4.2.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
